# tasknotes-tui

./: CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
docs/demo-vault/: mdbase.yaml  tasknotes-tui.yaml  tasknotes.yaml
docs/demo-vault/TaskNotes/Tasks/: Cleanup archived notes.md  Inbox sweep.md  Plan release.md  Weekly review.md  Write changelog.md
docs/demo-vault/_types/: task.md
docs/vhs/: overview.tape  workflow.tape
js/: tasknotes-spec-adapter.mjs
src/: app.rs  config.rs  create_compat.rs  date.rs  field_mapping.rs  lib.rs  recurrence.rs  repository.rs  snapshot.rs  spec_ops.rs  task_ops.rs  time_tracking.rs  tui_config.rs  ui.rs  validation.rs  view_query.rs
