[package]
name = "tasknotes-tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "tasknotes_tui"
path = "src/lib.rs"

[[bin]]
name = "tasknotes-tui"
path = "src/bin/tasknotes-tui.rs"

[[bin]]
name = "tasknotes-spec-bridge"
path = "src/bin/tasknotes-spec-bridge.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
mdbase = { path = "../mdbase-rs", version = "=0.3.0-alpha.1" }
ratatui = "0.29"
regex = "1"
rrule = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
